force-app/main/default/objects/Lead/fields/CID_of_Referer__c.field-meta.xml
<CustomField>
    <fullName>CID_of_Referer__c</fullName>
    <label>CID of Referrer</label>
    <length>50</length>
    <type>Text</type>
</CustomField>