force-app/main/default/objects/Lead/fields/Email_Conversation_Done__c.field-meta.xml
<CustomField>
    <fullName>Email_Conversation_Done__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Conversation Done?</label>
    <type>Checkbox</type>
</CustomField>