force-app/main/default/objects/Lead/fields/Is_Email_Invalid__c.field-meta.xml
<CustomField>
    <fullName>Is_Email_Invalid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Email Invalid</label>
    <type>Checkbox</type>
</CustomField>