force-app/main/default/objects/Lead/fields/Referral_Phone__c.field-meta.xml
<CustomField>
    <fullName>Referral_Phone__c</fullName>
    <label>Referral Phone</label>
    <type>Phone</type>
</CustomField>