force-app/main/default/objects/Lead/fields/Total_Emails__c.field-meta.xml
<CustomField>
    <fullName>Total_Emails__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Emails</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>