force-app/main/default/objects/Lead/validationRules/Confidence_Level_has_to_be_filled_by_ISM.validationRule-meta.xml
<ValidationRule>
    <fullName>Confidence_Level_has_to_be_filled_by_ISM</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
         ISPICKVAL( Confidence_Level__c , &apos;&apos;) ,
    OR(
         ( AND(Prior_Status__c == &apos;Open&apos;,
           OR( ISPICKVAL(Status, &apos;On Hold&apos;), ISPICKVAL(Status,&apos;Deferred&apos;)
    
         ) ) ),

        ( AND(Prior_Status__c == &apos;ATC&apos;,
          OR( ISPICKVAL(Status, &apos;In Conversation&apos;), ISPICKVAL(Status, &apos;On Hold&apos;),
              ISPICKVAL(Status,&apos;Deferred&apos;)
           ) ) ),

        ( AND(Prior_Status__c == &apos;In Conversation&apos;,
          OR( ISPICKVAL(Status, &apos;On Hold&apos;), ISPICKVAL(Status,&apos;Deferred&apos;)
        ) ) ),

        ( AND(Prior_Status__c == &apos;On Hold&apos;,
              OR(ISPICKVAL(Status,&apos;Deferred&apos;), ISPICKVAL(Status, &apos;In Conversation&apos;)
         ) ) ),

       ( AND(Prior_Status__c == &apos;Deferred&apos;,
         OR(ISPICKVAL(Status, &apos;In Conversation&apos;)
        ) ) )
		)
)</errorConditionFormula>
    <errorMessage>Confidence Level has to be filled by the ISM</errorMessage>
</ValidationRule>