force-app/main/default/objects/Lead/validationRules/Either_email_or_Call_record_is_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Either_email_or_Call_record_is_mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISCHANGED( Status ) ,
    OR(Email_Conversation_Done__c == false, Telephonic_Conversation__c == false),  
    OR( 
        ( AND(Prior_Status__c == &apos;Open&apos;,  
       OR( ISPICKVAL(Status, &apos;ATC&apos;), ISPICKVAL(Status, &apos;In Conversation&apos;), ISPICKVAL(Status, &apos;Dead&apos;), 
           ISPICKVAL(Status, &apos;On Hold&apos;), ISPICKVAL(Status,&apos;Deferred&apos;) 
           
          )  ) 
     ),

     ( AND(Prior_Status__c == &apos;ATC&apos;,  
        OR( ISPICKVAL(Status, &apos;In Conversation&apos;), ISPICKVAL(Status, &apos;Dead&apos;), ISPICKVAL(Status, &apos;On Hold&apos;),
            ISPICKVAL(Status,&apos;Deferred&apos;), ISPICKVAL(Status, &apos;Promote&apos;) 
          )  )
     ),

     ( AND(Prior_Status__c == &apos;In Conversation&apos;,  
        OR( ISPICKVAL(Status, &apos;Dead&apos;), ISPICKVAL(Status, &apos;On Hold&apos;), ISPICKVAL(Status,&apos;Deferred&apos;), 
           ISPICKVAL(Status, &apos;Promote&apos;)  
          )  )
     ),     
     
     ( AND(Prior_Status__c == &apos;On Hold&apos;,  
        OR(ISPICKVAL(Status,&apos;Deferred&apos;), 
           ISPICKVAL(Status, &apos;Promote&apos;), ISPICKVAL(Status, &apos;Dead&apos;), ISPICKVAL(Status, &apos;In Conversation&apos;)
          )  )
     ),
    
     ( AND(Prior_Status__c == &apos;Deferred&apos;,  
        OR(ISPICKVAL(Status, &apos;Promote&apos;), ISPICKVAL(Status, &apos;In Conversation&apos;), ISPICKVAL(Status, &apos;Dead&apos;)
          )  )
     )
    )     
)</errorConditionFormula>
    <errorMessage>Call record and Email record is mandatory</errorMessage>
</ValidationRule>