force-app/main/default/objects/Lead/validationRules/is_phone_and_email_invalid_checkbox.validationRule-meta.xml
<ValidationRule>
    <fullName>is_phone_and_email_invalid_checkbox</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
      OR(Prior_Status__c == &apos;Open&apos; ,Prior_Status__c == &apos;ATC&apos;, 
         Prior_Status__c == &apos;In Conversation&apos;), 
      ISPICKVAL(Status, &apos;Junk&apos;), 
      OR( Is_Email_Invalid__c == false, 
          Is_Phone_Invalid__c == false )
)</errorConditionFormula>
    <errorMessage>Is Phone and Email Invalid checkbox should be checked</errorMessage>
</ValidationRule>