force-app/main/default/objects/Lead/validationRules/Owner_should_be_a_User_not_From_Queue.validationRule-meta.xml
<ValidationRule>
    <fullName>Owner_should_be_a_User_not_From_Queue</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISBLANK( Owner:User.Id ) ,  ISCHANGED( Status ) 
)</errorConditionFormula>
    <errorDisplayField>ISM__c</errorDisplayField>
    <errorMessage>Lead must be assigned to some USER to  proceed</errorMessage>
</ValidationRule>