force-app/main/default/objects/Lead/validationRules/Profiling_shd_completed_to_change_status.validationRule-meta.xml
<ValidationRule>
    <fullName>Profiling_shd_completed_to_change_status</fullName>
    <active>false</active>
    <errorConditionFormula>AND(  ISCHANGED( Status ) ,
 OR( 
     ( AND(Prior_Status__c == &apos;Open&apos;,  
       OR( ISPICKVAL(Status, &apos;In Conversation&apos;), ISPICKVAL(Status, &apos;Dead&apos;),
           ISPICKVAL(Status, &apos;On Hold&apos;), ISPICKVAL(Status,&apos;Deferred&apos;), 
           ISPICKVAL(Status, &apos;Promote&apos;) 
          )  ) 
     ),

     ( AND(Prior_Status__c == &apos;ATC&apos;,  
        OR( ISPICKVAL(Status, &apos;In Conversation&apos;), ISPICKVAL(Status, &apos;Dead&apos;),
           ISPICKVAL(Status, &apos;On Hold&apos;), ISPICKVAL(Status,&apos;Deferred&apos;), 
           ISPICKVAL(Status, &apos;Promote&apos;)  
          )  )
     ),

     ( AND(Prior_Status__c == &apos;In Conversation&apos;,  
        OR(ISPICKVAL(Status, &apos;Promote&apos;)
          )  )
     ),
     
     ( AND(Prior_Status__c == &apos;On Hold&apos;,  
        OR(ISPICKVAL(Status, &apos;Promote&apos;)
          )  )
     ),
    
     ( AND(Prior_Status__c == &apos;Deferred&apos;,  
        OR(ISPICKVAL(Status, &apos;Promote&apos;) 
          )  )
     )     
     
   ), 

   OR(
 
     ( AND( ISPICKVAL( Profession__c , &apos;Student&apos;) ,  
        OR( ISPICKVAL(Qualification__c, &apos;&apos;), ISPICKVAL(Branch__c , &apos;&apos;), 
            ISBLANK(Specialization__c),   ISBLANK(Year_of_Graduation__c) , 
            ISBLANK(Why_This_Course__c ) 
        ) 
       )
     )
   ,
     ( AND( ISPICKVAL(Profession__c, &apos;Working Professional&apos;) ,  
        OR( ISBLANK( Relevant_Experience__c), ISBLANK( Current_Domain__c), 
            ISBLANK(Year_of_Experience__c),  ISBLANK(Designation__c ) , 
            ISBLANK( Company ) 
        ) 
       )
     )
    ,
    (ISPICKVAL(Profession__c , &apos;&apos;))

   )

)</errorConditionFormula>
    <errorMessage>Profiling to be completed to change status.</errorMessage>
</ValidationRule>