force-app/main/default/objects/Lead/validationRules/Restrict_on_going_back.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_on_going_back</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
      (AND(Prior_Status__c == &apos;In Conversation&apos; , OR(ISPICKVAL(Status, &apos;ATC&apos;),
      ISPICKVAL(Status, &apos;New&apos;) ) ) ),

      (AND(Prior_Status__c == &apos;ATC&apos; , ISPICKVAL(Status, &apos;New&apos;) ) )
)</errorConditionFormula>
    <errorMessage>You cannot go back</errorMessage>
</ValidationRule>