force-app/main/default/objects/Lead/validationRules/Restrict_to_Convert_Lead_Manually.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_to_Convert_Lead_Manually</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    NOT(Should_be_Converted__c),  ISPICKVAL(Status, &apos;Converted&apos;)
)</errorConditionFormula>
    <errorMessage>Lead cannot be converted Manually</errorMessage>
</ValidationRule>