force-app/main/default/objects/Lead/validationRules/Specify_Dead_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Specify_Dead_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
    OR(
       Prior_Status__c == &apos;ATC&apos;, 
       Prior_Status__c == &apos;In Conversation&apos;, 
       Prior_Status__c == &apos;Deferred&apos;, 
       Prior_Status__c == &apos;On Hold&apos;
    ),
    ISPICKVAL(Status, &apos;Dead&apos;),
    ISPICKVAL(Reason_For_Dead__c, &apos;&apos;) 
)</errorConditionFormula>
    <errorDisplayField>Reason_For_Dead__c</errorDisplayField>
    <errorMessage>Please specify reason for dead</errorMessage>
</ValidationRule>