force-app/main/default/objects/Lead/validationRules/Specify_On_Hold_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Specify_On_Hold_Reason</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
     ISBLANK(Reason_for_On_Hold__c),  Prior_Status__c == &apos;ATC&apos; , 
     ISPICKVAL(Status, &apos;On Hold&apos;)
)</errorConditionFormula>
    <errorDisplayField>Reason_for_On_Hold__c</errorDisplayField>
    <errorMessage>Please specify On Hold Reason</errorMessage>
</ValidationRule>